--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
-<script src="https://d3js.org/d3.v5.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-<script src="main.js"></script>
 <link rel="stylesheet" href="main.css">
 
-<svg height="10" width="10" xmlns="http://www.w3.org/2000/svg" version="1.1"> <defs> <pattern id="horizontal-stripe-1" patternUnits="userSpaceOnUse" width="10" height="10"> <image xlink:href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPScxMCcgaGVpZ2h0PScxMCc+CiAgPHJlY3Qgd2lkdGg9JzEwJyBoZWlnaHQ9JzEwJyBmaWxsPSd3aGl0ZScgLz4KICA8cmVjdCB4PScwJyB5PScwJyB3aWR0aD0nMTAnIGhlaWdodD0nMScgZmlsbD0nYmxhY2snIC8+Cjwvc3ZnPg==" x="0" y="0" width="10" height="10"> </image> </pattern> </defs> </svg>
+<div class="box-left">
+    <u>Instructions</u><br>
+    SPACE - Jump<br>
+    ENTER - Start<br>
+</div>
+<div class="box-right"><u>Leaderboard</u>
+    <div id="leaderboard"></div>
+</div>
 
 <div class="center">
-    <img src="img/jumpy-wpi.png" height="20%" >
+    <img src="img/jumpy-wpi.png" height="20%">
 </div>
+<div id="placeholder" style="height: 480px; width:640px"></div>
 <div class="center" id="svgcontainer"></div>
 <hr>
 <footer>
     <p> Created by Karitta Christina (Kit) Zellerbach</p>
 </footer>
+
+<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="main.js"></script>
