--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="center" id="svgcontainer"></div>
 <hr>
 <footer>
-    <p> Created by Karitta Christina (Kit) Zellerbach</p>
+    <p> Created by Karitta Christina (Kit) Zellerbach. Sound from https://freesound.org</p>
 </footer>
 
 <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
