Added sound mute option

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <u>Instructions</u><br>
     SPACE - Jump<br>
     ENTER - Start<br>
+    M - Mute/Unmute Sound<br>
 </div>
 <div class="box-right"><u>Leaderboard</u>
     <div id="leaderboard"></div>
