Mute icon and banner size

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="main.css">
+<i id="vol_off" class="material-icons" style="display:none">volume_off</i>
+<i id="vol_on" class="material-icons">volume_up</i>
 
 <div class="box-left">
     <u>Instructions</u><br>
@@ -12,7 +15,7 @@
 </div>
 
 <div class="center">
-    <img src="img/jumpy-wpi.png" height="20%">
+    <img src="img/jumpy-wpi.png" height="18%">
 </div>
 <div id="placeholder" style="height: 480px; width:640px"></div>
 <div class="center" id="svgcontainer"></div>
